[workspace]
resolver = "2"
members = [
  "asciidoctrine",
  "lisi",
  "ansicht",
]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.8"

clap = { version = "4", features = ["derive"] }
pest = "2.8"
pest_derive = "2.8"

