[package]
name = "ansicht"
version = "0.1.0"
authors = ["Benjamin Kober <benko@kober-systems.com>"]
edition = "2018"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
