[package]
name = "ansicht"
version = "0.1.0"
description = "visual verification of architecture"
readme = "ansicht.adoc"
homepage = "https://kober-systems.github.io/literate_programming_toolsuite/ansicht/ansicht.html"
repository = "https://github.com/kober-systems/literate_programming_toolsuite"
authors = ["Benjamin Kober <benko@kober-systems.com>"]
edition = "2018"
license = "MIT"
keywords = ["documentation", "cli"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
