[package]
name = "asciidoctrine"
version = "0.1.1"
authors = ["Benjamin Kober <benko@kober-systems.com>"]
edition = "2018"
license = "MIT"
keywords = ["documentation", "asciidoc", "cli"]
categories = ["command-line-utilities", "text-processing", "parser-implementations"]

[dependencies]
pest = "2.1.0"
pest_derive = "2.1.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1"
docx-rs = "0.4"
log = "0.4.8"
simple_logger = "4"

[dev-dependencies]
pretty_assertions = "1"
