[package]
name = "asciidoctrine"
version = "0.1.1"
description = "process asciidoc files"
readme = "asciidoctrine.adoc"
homepage = "https://kober-systems.github.io/literate_programming_toolsuite/asciidoctrine/asciidoctrine.html"
repository = "https://github.com/kober-systems/literate_programming_toolsuite"
authors = ["Benjamin Kober <benko@kober-systems.com>"]
edition = "2018"
license = "MIT"
keywords = ["documentation", "asciidoc", "cli"]
categories = ["command-line-utilities", "text-processing", "parser-implementations"]
include = [
  "**/*.rs",
  "**/*.pest",
  "**/assets/*.html",
  "**/assets/*.css",
  "Cargo.toml",
]

[dependencies]
pest = "2.1.0"
pest_derive = "2.1.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1"
docx-rs = "0.4"
log = "0.4.8"
simple_logger = { version = "5", features = ["stderr"] }

[dev-dependencies]
pretty_assertions = "1"
