[package]
name = "asciidoctrine"
version = "0.1.1"
description = "process asciidoc files"
readme = "asciidoctrine.adoc"
homepage = "https://kober-systems.github.io/literate_programming_toolsuite/asciidoctrine/asciidoctrine.html"
repository = "https://github.com/kober-systems/literate_programming_toolsuite"
authors = ["Benjamin Kober <benko@kober-systems.com>"]
edition = "2018"
license = "MIT"
keywords = ["documentation", "asciidoc", "cli"]
categories = ["command-line-utilities", "text-processing", "parser-implementations"]
include = [
  "**/*.rs",
  "**/*.pest",
  "**/assets/*.html",
  "**/assets/*.css",
  "Cargo.toml",
]

[dependencies]
pest = { workspace = true }
pest_derive = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tera = "1"
docx-rs = "0.4"
log = { workspace = true }
simple_logger = { version = "5", features = ["stderr"] }
pulldown-cmark = "0.13"

[dev-dependencies]
pretty_assertions = "1"
