[package]
name = "lisa"
version = "0.2.0"
authors = ["Benjamin Kober <k.o.b.e.r@web.de>"]
edition = "2018"

[dependencies]
asciidoctrine = { path = "../asciidoctrine" }
pest = "2.1.0"
pest_derive = "2.1.0"
topological-sort = "0.2"
rhai = "1.3"
thiserror = "1.0"
log = "0.4"
simple_logger = "1"
anyhow = "1.0"
clap = { version = "3", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"
