[package]
name = "lisi"
version = "0.2.0"
description = "literate programming with asciidoc"
readme = "lisi.adoc"
homepage = "https://kober-systems.github.io/literate_programming_toolsuite/lisi/lisi.html"
repository = "https://github.com/kober-systems/literate_programming_toolsuite"
authors = ["Benjamin Kober <benko@kober-systems.com>"]
edition = "2018"
license = "MIT"
keywords = ["literate-programming", "asciidoc", "cli"]
categories = ["command-line-utilities", "development-tools"]
include = [
  "**/*.rs",
  "**/*.pest",
  "Cargo.toml",
]

[dependencies]
asciidoctrine = { path = "../asciidoctrine", version = "0.1" }
pest = "2.1.0"
pest_derive = "2.1.0"
topological-sort = "0.2"
rhai = "1.3"
thiserror = "2.0"
log = "0.4"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"
